Updated instructions on how to build

--- a/can_bus_driver/makefile
+++ b/can_bus_driver/makefile
@@ -1,5 +1,6 @@
 # Makefile to build select Microblaze projects.
-export PATH := /opt/Xilinx/SDK/2017.1/bin:/opt/Xilinx/SDK/2017.1/gnu/microblaze/lin/bin:$(PATH)
+XILINX_SDK_PATH = /opt/Xilinx/SDK/2017.1
+export PATH := ${XILINX_SDK_PATH}/bin:${XILINX_SDK_PATH}/gnu/microblaze/lin/bin:$(PATH)
 
 MBBINS = mailbox.bin \
 		arduino_can_bus.bin
