--- a/can_bus_driver/arduino_can_bus/Debug/makefile
+++ b/can_bus_driver/arduino_can_bus/Debug/makefile
@@ -25,38 +25,38 @@ endif
 
 # Add inputs and outputs from these tool invocations to the build variables 
 ELFSIZE += \
-arduino_lcd18.elf.size \
+arduino_can_bus.elf.size \
 
 
 # All Target
-all: arduino_lcd18.elf secondary-outputs
+all: arduino_can_bus.elf secondary-outputs
 
 # Tool invocations
-arduino_lcd18.elf: $(OBJS) ../src/lscript.ld $(USER_OBJS)
+arduino_can_bus.elf: $(OBJS) ../src/lscript.ld $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: MicroBlaze gcc linker'
-	mb-gcc -Wl,-T -Wl,../src/lscript.ld -L../../bsp_arduino/iop3_mb/lib -mlittle-endian -mcpu=v9.6 -mxl-soft-mul -Wl,--no-relax -o "arduino_lcd18.elf" $(OBJS) $(USER_OBJS) $(LIBS)
+	mb-gcc -Wl,-T -Wl,../src/lscript.ld -L../../bsp_arduino/iop3_mb/lib -mlittle-endian -mcpu=v9.6 -mxl-soft-mul -Wl,--no-relax -o "arduino_can_bus.elf" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
-arduino_lcd18.elf.size: arduino_lcd18.elf
+arduino_can_bus.elf.size: arduino_can_bus.elf
 	@echo 'Invoking: MicroBlaze Print Size'
-	mb-size arduino_lcd18.elf  |tee "arduino_lcd18.elf.size"
+	mb-size arduino_can_bus.elf  |tee "arduino_can_bus.elf.size"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-arduino_lcd18.bin: arduino_lcd18.elf
+arduino_can_bus.bin: arduino_can_bus.elf
 	@echo 'Invoking: MicroBlaze Bin Gen'
-	mb-objcopy -O binary arduino_lcd18.elf arduino_lcd18.bin
+	mb-objcopy -O binary arduino_can_bus.elf arduino_can_bus.bin
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(EXECUTABLES)$(OBJS)$(S_UPPER_DEPS)$(C_DEPS)$(ELFSIZE) arduino_lcd18.elf arduino_lcd18.bin
+	-$(RM) $(EXECUTABLES)$(OBJS)$(S_UPPER_DEPS)$(C_DEPS)$(ELFSIZE) arduino_can_bus.elf arduino_can_bus.bin
 	-@echo ' '
 
-secondary-outputs: $(ELFSIZE) arduino_lcd18.bin
+secondary-outputs: $(ELFSIZE) arduino_can_bus.bin
 
 .PHONY: all clean dependents
 .SECONDARY:
